@@ -1,0 +1,36 @@
+[Settings]
+NumFields=4
+
+[Field 1]
+Type=Label
+Left=10
+Right=-40
+Top=10
+Bottom=18
+Text=This custom page demonstrates the "Link" control
+
+[Field 2]
+Type=Link
+Left=20
+Right=-40
+Top=40
+Bottom=48
+Text=* Run notepad
+
+[Field 3]
+Type=Link
+Left=20
+Right=-40
+Top=50
+Bottom=58
+State=mailto:someone@anywhere.com
+Text=* Send E-mail
+
+[Field 4]
+Type=Link
+Left=20
+Right=-40
+Top=60
+Bottom=68
+State=http://nsis.sourceforge.net/
+Text=* Homepage http://nsis.sourceforge.net/
